--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/main.js"></script>
+    <title>JumpJump</title>
+    
 </head>
 <body>
-    <canvas id="canvas" style=" border: blue 10px;" width="500" height="400"></canvas>
+    <canvas id="main-canvas" style=" border: 10px solid blue" width="500" height="400"></canvas>
     <script src="js/main.js"></script>
 </body>
 </html>
